# store-api-ux

./: .coverage  .dockerignore  .gitignore  Dockerfile  debugger.py  pyproject.toml  requirements.txt  store-api-ux.code-workspace
.github/workflows/: code-analysis.yml  main.yml  pr-merge.yml  test.yml
app/: main.py  store-api-ux.code-workspace
app/common/: dependencies.py  exceptions.py  token_schema.py
app/core/: config.py  crypto.py  database.py  http_request.py  security.py
app/modules/admin/: admin_controller.py  admin_model.py  admin_module.py  admin_schema.py  admin_service.py
app/modules/category/: category_controller.py  category_model.py  category_schema.py
app/modules/products/: products_controller.py  products_model.py  products_schema.py
database/: ERD.pgerd  ERD2.pgerd  v1.0 store database restore.sql
tests/: test_base.py
tests/common/: test_dependencies.py  test_exceptions.py  test_token_schema.py
tests/core/: test_crypto.py  test_database.py  test_http_request.py  test_security.py
